--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -116,6 +116,9 @@ on boot
     mkdir /data/vendor/camera 0770 camera camera
 
     # Double Tap to Wake
+    chown system system /proc/tp_gesture
+    chmod 0664 /proc/tp_gesture
+
     chown system system /sys/touchpanel/double_tap
     chmod 0664 /sys/touchpanel/double_tap
 
