--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -119,6 +119,9 @@ on boot
     chown system system /proc/tp_gesture
     chmod 0664 /proc/tp_gesture
 
+    chown system system /sys/touchpanel/double_tap
+    chmod 0664 /sys/touchpanel/double_tap
+
 #Load WLAN driver
    insmod /vendor/lib/modules/qca_cld3_wlan.ko
    chown wifi wifi /sys/module/wlan/parameters/fwpath
