lavender: show Doze in display page
Signed-off-by: xenxynon <flynryder427@gmail.com>

--- a/DeviceDoze/AndroidManifest.xml
+++ b/DeviceDoze/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:label="@string/ambient_display_title"
             android:theme="@style/Theme.SubSettingsBase">
             <intent-filter>
-                <action android:name="com.my.device.parts.DOZE_SETTINGS" />
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
